cluster/apps/media/apps/qbittorrent/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - qbittorrent.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
            namespace: traefik
      backendRefs:
        - name: qbittorrent
          port: 8080
