cluster/apps/media/apps/qbittorrent/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qbittorrent.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: qbittorrent
          namespace: media
          port: 8080
      middlewares:
        - name: ak-outpost-proxy-outpost
          namespace: authentik
  tls: {}
