cluster/apps/media/apps/qbittorrent/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: qbittorrent
  namespace: media
spec:
  hosts:
  - qbittorrent.${domain_name}
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - route:
    - destination:
        host: qbittorrent.media.svc.cluster.local
        port:
          number: 8080
    match:
    - authority:
        exact: qbittorrent.${domain_name}
      uri:
        prefix: /
